--- a/working_History/contentsManage/client/src/components/UploadForm.css
+++ b/working_History/contentsManage/client/src/components/UploadForm.css
@@ -48,3 +48,19 @@ input버튼 css
     color: white;
     transition: 0.5s;
 }
+
+.image-preview {
+
+    width: 0%;
+    opacity: 0;
+    display: block;
+    margin: 0px auto 20px auto;
+    border-radius: 10px;
+    border: 5px solid gray;
+}
+
+.image-preview-show {
+    width: 75%;
+    opacity: 1;
+    transition: 0.5s;
+}
